<resources>
    <string name="app_name">My Application</string>
    <string name="editxt">EDITOR</string>
    <string name="cameratxt">CAMERA</string>
    <string name="imagediscription">salam3alekooo</string>
    <string name="choose_action">Choose action</string>
    <string name="textview">TextView</string>
    <string name="chooseaction">Choose Action</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="image_rotation">Image rotation</string>
    <string name="colour_filter">colour filter</string>
    <string name="image_scaling">Image scaling</string>
    <string name="vector_editor">Vector Editor</string>
    <string name="retouching">Retouching</string>
    <string name="unsharp_masking">Unsharp masking</string>
    <string name="affine_transformations">Affine transform</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="enter_the_rotation_degree">Enter the rotation degree</string>
    <string name="kk">kk</string>
    <string name="gray">Gray</string>
    <string name="speia">Speia</string>
    <string name="invert">Invert</string>
    <string name="zz">zz</string>
    <string name="retouch">retouch</string>
    <string name="radius_format">Radius: %d</string>
    <string name="radius_2">Radius: 2</string>
    <string name="uikyghjf">uikyghjf</string>
    <string name="enter_x_scale">Enter X Scale</string>
    <string name="resize">Resize</string>
    <string name="enter_y_scale">Enter Y Scale</string>

    <string name="title_activity_vector">VectorActivity</string>
    <string name="toggle_interpolation">Toggle Interpolation</string>

    <string name="apply_mask">Apply Mask</string>
    <string name="save">Save</string>
    <string name="rotate">Rotate</string>
    <string name="save2">Save</string>
    <string name="finish_retouching">Finish Retouching</string>
    <string name="start_retouching">Start Retouching</string>
    <string name="Start_Retouching">Start Retouching</string>
    <string name="save_retouched_image">Save Retouched Image</string>
    <string name="save_image">Save Image</string>


</resources>