<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/uikyghjf"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resizeXScaleEditText"
        app:layout_constraintDimensionRatio="H,1:1" />

    <EditText
        android:id="@+id/resizeXScaleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_x_scale"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintTop_toBottomOf="@+id/photoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/resizeYScaleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_y_scale"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintTop_toBottomOf="@+id/resizeXScaleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/resizeButton"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="154dp"
        android:text="@string/resize"
        android:backgroundTint="#0077CC"
        android:background="@drawable/editor"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/resizeYScaleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="154dp"
        android:background="@drawable/editor"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resizeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
