<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctionalitySelectionActivity">

    <!-- Place holder for photo -->

    <ImageView
        android:id="@+id/image1"
        android:layout_width="416dp"
        android:layout_height="270dp"
        android:contentDescription="@string/imagediscription"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_signup" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsGroup"
        android:layout_width="410dp"
        android:layout_height="527dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- First column of buttons -->

        <!-- Second column of buttons -->

        <Button
            android:id="@+id/Image_rotation"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/editor"
            android:backgroundTint="#8066CF"
            android:drawableEnd="@drawable/image_rotate_svgrepo_com"
            android:padding="10dp"
            android:text="@string/image_rotation"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/colour_filter"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/editor"
            android:backgroundTint="#8066CF"
            android:drawableEnd="@drawable/color_filter_outline_svgrepo_com"
            android:padding="10dp"
            android:text="@string/colour_filter"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Image_rotation" />

        <Button
            android:id="@+id/Image_scaling"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/editor"
            android:backgroundTint="#8066CF"
            android:drawableEnd="@drawable/resize_horizontal_svgrepo_com"
            android:padding="10dp"
            android:text="@string/image_scaling"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colour_filter" />

        <Button
            android:id="@+id/Vector_editor"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/editor"
            android:backgroundTint="#DD9BC7"
            android:drawableEnd="@drawable/vector_edit_tools_svgrepo_com"
            android:padding="10dp"
            android:text="@string/vector_editor"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Retouching"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/editor"
            android:backgroundTint="#FFDD9BC7"
            android:drawableEnd="@drawable/photo_retouching_svgrepo_com"
            android:padding="10dp"
            android:text="@string/retouching"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Vector_editor" />

        <Button
            android:id="@+id/Unsharp_masking"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/editor"
            android:backgroundTint="#DD9BC7"
            android:drawableEnd="@drawable/sharpness_filled_svgrepo_com"
            android:padding="10dp"
            android:text="@string/unsharp_masking"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Retouching" />

        <Button
            android:id="@+id/Affinetransformations"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/editor"
            android:backgroundTint="#8066CF"
            android:drawableEnd="@drawable/dots_svgrepo_com"
            android:padding="10dp"
            android:text="@string/affine_transformations"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Unsharp_masking" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
