<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="396dp"
        android:layout_height="332dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo2"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resizeXScaleEditText"
        android:layout_width="206dp"
        android:layout_height="23dp"

        android:layout_marginStart="102dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#ffff"
        android:freezesText="false"
        android:hint="@string/enter_x_scale"
        android:inputType="number"
        android:max="360"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/resizeYScaleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoImageView" />

    <EditText
        android:id="@+id/resizeYScaleEditText"
        android:layout_width="206dp"
        android:layout_height="23dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#ffff"
        android:freezesText="false"
        android:hint="@string/enter_x_scale"
        android:inputType="number"
        android:max="360"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/resizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resizeButton"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/editor"
        android:backgroundTint="#6E4FCC"
        android:text="@string/resize"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/editor"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
